--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<li><a href="#headerwrap">Acceuil</a></li>
 						<li><a href="#about">À propos</a></li>
 						<li><a href="#services">Nos Services</a></li>					
-						<li><a href="#team">sdsd</a></li>
+						<li><a href="#team">L'equipe</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#blog">Blog</a></li>
 						<li><a href="#contact">Contacts</a></li>
@@ -57,7 +57,7 @@
   
   
 		<!-- ==== HEADERWRAP ==== -->
-	    <div id="headerwrap" name="home">
+	    <div id="headerwrap" class="smoothScroll" name="home">
 			<header class="clearfix">
 	  		 		<h1 class="animated bounceIn">Wassouh Track</h1>
 	  		 		<p class="animated slideInLeft">Laissez nous vous aidez à proteger votre vehicule.</p>
@@ -68,7 +68,7 @@
 
 		<!--  SERVICES -->
 		<div class="greywrap">
-			<div class="container" id="services" name="service">			
+			<div class="container smoothSroll" id="services" name="service">			
 				<div class="row">
 					<div class="col-md-4 col-sm-4 col-xs-6 callout">
 						<div class="col-md-3 service-icon-wrapper img-circle">
