--- a/index.html
+++ b/index.html
@@ -195,33 +195,70 @@
 			</div><!-- row -->
 		</div><!-- container -->
 		
-		<!-- ==== GREYWRAP ==== -->
-		<div class="greywrap">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 centered fade-up">
-						<img class="img-responsive" src="images/carsecured.png" style="min-width: 420px; min-height: 100px;">
-					</div>
-					<div class="col-md-6 fade-down">
-						<h2>SECURISEZ VOTRE VEHICULE AUJOURD'HUI</h2>
-						<p>Often voice and the spoke. No shewing fertile village equally prepare up females as an. That do an case an what plan hour of paid. Invitation is unpleasant astonished preference attachment friendship on</p>
-						<p><a class="btn btn-success">Contactez-Nous</a></p>
-					</div>					
-				</div><!-- row -->
-			</div>
-			<br>
-			<br>
-		</div><!-- greywrap -->
-		
 		<!-- ==== SECTION DIVIDER3 -->
 		<section class="section-divider textdivider divider3">
 			<div class="container">
 				<h1 class="fade-down">NOS VOUS ACCOMPAGNERONS TOUT AU LONG DE LA PROCEDURE</h1>
 				<hr>
-				<p class="fade-up">Bringing him smallest met few now returned surprise learning jennings. Objection delivered eagerness he exquisite at do in. Warmly up he nearer mr merely me.</p>
+				<p class="fade-up">Notre equipe partage des valeurs communes, l’excellence, l’esprit d’équipe, la confiance, la qualité, le respect, l’engagement, la responsabilité,l’écoute et la satisfaction du client.</p>
 			</div><!-- container -->
 		</section><!-- section -->
-
+		<div class="container" id="contact" name="contact">
+			<div class="row row white">
+			<br>
+				<h1 class="centered fade-down">MERCI DE NOUS AVOIR VISITÉ</h1>
+				<hr class="fade-down title-mb">
+				<div class="col-md-4 fade-up centered">
+					<h3>Coordonnées</h3>
+					<p><span class="icon icon-home"></span>Niamey, Niger<br/>
+						<span class="icon icon-phone"></span>+213 793 55 80 70<br/>
+						<span class="icon icon-envelop"></span> <a href="mailto:boubacaridrissasadou0019@gmail.com">info@wassouhtrack.tk</a> <br/>
+					</p>
+				</div><!-- col -->
+				
+				<div class="col-md-4 fade-up centered">
+					<h3>Boite à lettre</h3>
+					<p>Souscrivez à notre boite à lettre et restez informer des dernières informations concernant nos services, offres et beaucoup plus.</p>
+		
+						<form class="form-horizontal" role="form">
+						  <div class="form-group">
+							<label for="inputEmail1" class="col-md-4 control-label"></label>
+							<div class="col-md-10">
+							  <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
+							</div>
+						  </div>
+						  <div class="form-group">
+							<label for="text1" class="col-md-4 control-label"></label>
+							<div class="col-md-10">
+							  <input type="text" class="form-control" id="text1" placeholder="Nom">
+							</div>
+						  </div>
+						  <div class="form-group">
+							<div class="col-md-10">
+							  <button type="submit" class="btn btn-success">Souscrire</button>
+							</div>
+						  </div>
+					   </form><!-- form -->
+				
+				</div><!-- col -->
+		
+			</div><!-- row -->
+		
+		</div><!-- container -->
+		<div id="footerwrap">
+			<div class="container">
+				<div class="btt-wrapper fade-down"><a class="btt-link smoothScroll" href="#home"><i class="el-icon-chevron-up"></i></a></div>
+				<ul id="footer-social" class="fade-down">
+					<li><a href="#" target="_blank" title="Like Us"><i class="el-icon-twitter"></i></a></li>
+					<li><a href="#" target="_blank" title="Like Us"><i class="el-icon-facebook"></i></a></li>
+					<li><a href="#" target="_blank" title="Like Us"><i class="el-icon-googleplus"></i></a></li>
+					<li><a href="#" target="_blank" title="Like Us"><i class="el-icon-flickr"></i></a></li>
+					<li><a href="#" target="_blank" title="Like Us"><i class="el-icon-youtube"></i></a></li>
+					<li><a href="#" target="_blank" title="Like Us"><i class="el-icon-rss"></i></a></li>
+				</ul>
+				<h4 class="fade-up"><a href="http://">Wassouh Track</a> - Copyright 2021</h4>
+			</div>
+		</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
