--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li><a href="#headerwrap">Acceuil</a></li>
-						<li><a href="#about">À propos</a></li>
-						<li><a href="#services">Nos Services</a></li>					
-						<li><a href="#team">L'equipe</a></li>
-						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#blog">Blog</a></li>
-						<li><a href="#contact">Contacts</a></li>
+						<li><a href="#headerwrap" class="smoothScroll">Acceuil</a></li>
+						<li><a href="#about" class="smoothScroll">À propos</a></li>
+						<li><a href="#services" class="smoothScroll">Nos Services</a></li>					
+						<li><a href="#team" class="smoothScroll">L'equipe</a></li>
+						<li><a href="#contact" class="smoothScroll">Contacts</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
@@ -57,7 +55,7 @@
   
   
 		<!-- ==== HEADERWRAP ==== -->
-	    <div id="headerwrap" class="smoothScroll" name="home">
+	    <div id="headerwrap" name="home">
 			<header class="clearfix">
 	  		 		<h1 class="animated bounceIn">Wassouh Track</h1>
 	  		 		<p class="animated slideInLeft">Laissez nous vous aidez à proteger votre vehicule.</p>
@@ -68,7 +66,7 @@
 
 		<!--  SERVICES -->
 		<div class="greywrap">
-			<div class="container smoothSroll" id="services" name="service">			
+			<div class="container" id="services" name="service">			
 				<div class="row">
 					<div class="col-md-4 col-sm-4 col-xs-6 callout">
 						<div class="col-md-3 service-icon-wrapper img-circle">
