--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 			<div class="row white centered">
 				<h1 class="fade-down centered">ÉQUIPE DIRIGEANTE</h1>
 				<hr class="fade-down title-mb">
-				<div class="col-md-4 profile">
+				<div class="col-md-4 profile fade-down">
 					<div class="image"><img class="img team-image" src="images/yassine.jpg" alt="Yassine Hamadou Mounkaila" style="border: none !important; border-radius: 10px;"><h3 class="titr">Yassine Hamadou Mounkaila</h3><p>Ingénieur en Informatique</p></div>
 				</div>
-				<div class="col-md-4 profile">
+				<div class="col-md-4 profile fade-down">
 					<div class="image"><img class="img team-image" src="images/bki.jpg" alt="Boubacar IDRISSA Sadou" style="border: none !important; border-radius: 10px;"><h3 class="titr">Boubacar Idrissa Sadou</h3><p>Ingénieur en Biochimie aplliquée(Chef d'équipe)</p></div>
 				</div>
-				<div class="col-md-4 profile">
+				<div class="col-md-4 profile fade-down">
 					<div class="image"><img class="img team-image" src="images/ito.jpg" alt="Issoufou Oumarou" style="border: none !important; border-radius: 10px;"><h3 class="titr">Issoufou Souna Oumarou</h3><p>Maintainancier Informatique</p></div>
 				</div>
 				
