--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</div>
 						<div class="col-md-9 fade-up service-info">
 							<div class="fade-up">
-								<h2>Securisez votre vehicule aujourd'hui</h2>
+								<h2>Securisez votre vehicule dès aujourd'hui</h2>
 							</div>
 						</div>
 					</div>	
@@ -132,23 +132,23 @@
 		<!-- ==== SECTION DIVIDER2 -->
 		<section class="section-divider textdivider divider2">
 			<div class="container">
-				<h1 class="fade-down">VOICI LA PREUVE</h1>
+				<h1 class="fade-down">FAITES NOUS CONFIANCE</h1>
 				<hr>
 				<div class="col-md-3">
-					<span class="counter">100</span>
+					<span class="counter">100%</span>
 					<span class="counter-desc">SECURITÉ</span>
 				</div>
 				<div class="col-md-3">
-					<span class="counter">1000</span>
-					<span class="counter-desc">Minimum Saving</span>
+					<span class="counter">100%</span>
+					<span class="counter-desc">AUTONOMIE</span>
 				</div>
 				<div class="col-md-3">
-					<span class="counter">10000</span>
-					<span class="counter-desc">Ideas</span>
+					<span class="counter">100%</span>
+					<span class="counter-desc">FIABILITÉ</span>
 				</div>
 				<div class="col-md-3">
-					<span class="counter">100000</span>
-					<span class="counter-desc">Profit</span>
+					<span class="counter">1 SEUL</span>
+					<span class="counter-desc">TRAÇEUR GPS</span>
 				</div>
 			</div><!-- container -->
 		</section><!-- section -->
@@ -169,7 +169,7 @@
 					<div class="image"><img class="img team-image" src="images/bki.jpg" alt="Boubacar IDRISSA Sadou" style="border: none !important; border-radius: 10px;"><h3 class="titr">Boubacar Idrissa Sadou</h3><p>Ingénieur en Biochimie aplliquée(Chef d'équipe)</p></div>
 				</div>
 				<div class="col-md-4 profile fade-down">
-					<div class="image"><img class="img team-image" src="images/ito.jpg" alt="Issoufou Oumarou" style="border: none !important; border-radius: 10px;"><h3 class="titr">Issoufou Souna Oumarou</h3><p>Maintainancier Informatique</p></div>
+					<div class="image"><img class="img team-image" src="images/ito.jpg" alt="Issoufou Oumarou" style="border: none !important; border-radius: 10px;"><h3 class="titr">Issoufou Souna Oumarou</h3><p>Maintenancier Informatique</p></div>
 				</div>
 				
 			</div><!-- row -->
@@ -179,7 +179,7 @@
 		<!-- ==== SECTION DIVIDER3 -->
 		<section class="section-divider textdivider divider3">
 			<div class="container">
-				<h1 class="fade-down">NOS VOUS ACCOMPAGNERONS TOUT AU LONG DE LA PROCEDURE</h1>
+				<h1 class="fade-down">NOUS VOUS ACCOMPAGNERONS TOUT AU LONG DE LA PROCEDURE</h1>
 				<hr>
 				<p class="fade-up">Notre equipe partage des valeurs communes, l’excellence, l’esprit d’équipe, la confiance, la qualité, le respect, l’engagement, la responsabilité,l’écoute et la satisfaction du client.</p>
 			</div><!-- container -->
@@ -192,7 +192,7 @@
 				<div class="col-md-4 fade-up centered">
 					<h3>Coordonnées</h3>
 					<p><span class="icon icon-home"></span>Niamey, Niger<br/>
-						<span class="icon icon-phone"></span>+213 793 55 80 70<br/>
+						<span class="icon icon-phone"></span>+227 96 11 25 04<br/>
 						<span class="icon icon-envelop"></span> <a href="mailto:boubacaridrissasadou0019@gmail.com">info@wassouhtrack.tk</a> <br/>
 					</p>
 				</div><!-- col -->
