--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				<h1 class="fade-down">FAITES NOUS CONFIANCE</h1>
 				<hr>
 				<div class="col-md-3">
-					<span class="counter">100</span><span>&percnt;</span>
+					<span class="counter">100</span>
 					<span class="counter-desc">SECURITÉ</span>
 				</div>
 				<div class="col-md-3">
@@ -147,7 +147,7 @@
 					<span class="counter-desc">FIABILITÉ</span>
 				</div>
 				<div class="col-md-3">
-					<span class="counter">100</span>
+					<span class="counte">1 SEUL</span>
 					<span class="counter-desc">TRAÇEUR GPS</span>
 				</div>
 			</div><!-- container -->
