--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					<span class="counter-desc">FIABILITÉ</span>
 				</div>
 				<div class="col-md-3">
-					<span class="counte">1 SEUL</span>
+					<span class="counter">1</span>
 					<span class="counter-desc">TRAÇEUR GPS</span>
 				</div>
 			</div><!-- container -->
